Fixed shadow alignment.

--- a/styles/init.css
+++ b/styles/init.css
@@ -6,5 +6,5 @@
 
 html {
 	font-family: "ComicNeue-Regular", sans-serif;
-	font-size: 1.4em;
+	font-size: 1.6em;
 }
