--- a/styles/nav.css
+++ b/styles/nav.css
@@ -23,21 +23,24 @@ nav ul {
 nav ul li {
 	display: inherit;
 	border-radius: 3px;
-	width: 10%;
-	max-height: 100%;
-	max-width: 32px;
-	min-width: 24px;
+	width: 3vw;
+	max-width: 2vw;
+	min-width: 32px;
+	border-left: 5px solid rgb(60, 60, 60, 0.4); /* Shadow effect. */
 }
 
 nav ul li a {
 	display: inherit;
 	width: 100%;
-	aspect-ratio: 1/4;
+	aspect-ratio: 1/3;
 	align-items: stretch; /* Expand to container size. */
-	border-left: 4px solid rgb(60, 60, 60, 0.4); /* Shadow effect. */
 	align-items: center;
 	justify-content: center;
 	color: #fae3af; /* Font only. */
+}
+
+nav ul li a img {
+	width: 70%;
 }
 
 nav ul li a img {
@@ -81,5 +84,9 @@ nav ul li:nth-child(8) {
 }
 
 nav ul li:nth-child(9) {
+	background: var(--book-grey);
+}
+
+nav ul li:nth-child(10) {
 	background: var(--book-grey);
 }
